fixed ios overflow issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,14 +4,10 @@
     margin: 0;
 }
 
-html{
-    height: 100vh;
+body, html{
     overflow: hidden;
-}
-
-body{
-    height: 100vh;
-    overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 
 .section {
